--- a/Stocky.Client/Components/Pages/UnAuthorized.razor
+++ b/Stocky.Client/Components/Pages/UnAuthorized.razor
@@ -18,7 +18,7 @@
 
     protected override Task OnInitializedAsync()
     {
-        AuthService.ClearToken();
+        AuthService.ClearTokenAsync();
         NavigationManager.NavigateTo("/", true);
         return Task.CompletedTask;
     }
